Make sure jump to end is visible on Mobile
Right now with long thread titles you lose the hash-link to jump
to the end of a thread. It's super-annoying. I moved it to the left
so it's always visible, IMO the best solution without drastically
restructuring the markup (PS. It should be a table!)

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -1704,6 +1704,12 @@ a {
 .subject-text {
     font-size: 18px;
     font-weight:bold;
+    margin-left:20px;
+}
+.thread .end-link {
+    position:absolute;
+    left:11px;
+    font-size:18px;
 }
 .subject {
     margin: 0 25px 3px 0;
